; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_bio_memleak_test.c_setup_tests.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_bio_memleak_test.c_setup_tests.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@test_bio_memleak = common dso_local global i32 0, align 4
@test_bio_get_mem = common dso_local global i32 0, align 4
@test_bio_new_mem_buf = common dso_local global i32 0, align 4
@test_bio_rdonly_mem_buf = common dso_local global i32 0, align 4
@test_bio_rdwr_rdonly = common dso_local global i32 0, align 4
@test_bio_nonclear_rst = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @setup_tests() #0 {
  %1 = load i32, i32* @test_bio_memleak, align 4
  %2 = call i32 @ADD_TEST(i32 %1)
  %3 = load i32, i32* @test_bio_get_mem, align 4
  %4 = call i32 @ADD_TEST(i32 %3)
  %5 = load i32, i32* @test_bio_new_mem_buf, align 4
  %6 = call i32 @ADD_TEST(i32 %5)
  %7 = load i32, i32* @test_bio_rdonly_mem_buf, align 4
  %8 = call i32 @ADD_TEST(i32 %7)
  %9 = load i32, i32* @test_bio_rdwr_rdonly, align 4
  %10 = call i32 @ADD_TEST(i32 %9)
  %11 = load i32, i32* @test_bio_nonclear_rst, align 4
  %12 = call i32 @ADD_TEST(i32 %11)
  ret i32 1
}

declare dso_local i32 @ADD_TEST(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
